<resources>
    <string name="app_name">Majstorija</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="login">Prijava</string>
    <string name="registration">Registracija</string>
    <string name="handyman_search">Pretraga majstora</string>
    <string name="handyman_service">Servis majstora</string>
    <string name="username">Nalog</string>
    <string name="password">Lozinka</string>
    <string name="customer">Kupac</string>
    <string name="handyman">Majstor</string>
    <string name="surname">Prezime</string>
    <string name="name">Ime</string>
    <string name="phone">Telefon</string>
    <string name="email">E-pošta</string>
    <string name="card">Kartica</string>
    <string name="basic">Osnovno</string>
    <string name="password_confirmed">Potvrda</string>
    <string name="account">Nalog</string>
    <string name="credit_card_number">Broj</string>
    <string name="validity">Validnost</string>
    <string name="verification_code">Verifikacioni kod</string>
    <string name="save">Sačuvaj</string>
    <string name="cancel">Odustani</string>
    <string name="credit_card">Kreditna kartica</string>
    <string name="search_parameters">Parametri pretrage</string>
    <string name="job">Posao</string>
    <string name="urgency">Urgentnost</string>
    <string name="rating">Ocena</string>
    <string name="special_skills">Specijalne veštine</string>
    <string name="price">Cena</string>
    <string name="date">Datum</string>
    <string name="experience">Iskustvo</string>
    <string name="search">Pretraga</string>
    <string name="requests">Zahtevi</string>
    <string name="edit">Izmena</string>
    <string name="logout">Odjava</string>
    <string name="favorites">Omiljeni</string>
    <string name="profile">Profil</string>
    <string name="request">Zahtev</string>
    <string name="profile_view">Pregled profila</string>
    <string name="contact">Kontakt</string>
    <string name="job_hyphen">-%1$s RSD-</string>
    <string name="sending_request">Slanje zahteva</string>
    <string name="address">Adresa</string>
    <string name="description">Opis</string>
    <string name="time">Vreme</string>
    <string name="payment">Plaćanje</string>
    <string name="cash">Keš</string>
    <string name="county">Opština</string>
    <string name="street">Ulica</string>
    <string name="send">Pošalji</string>
    <string name="request_history">Pregled zahteva</string>
    <string name="status">Stanje</string>
    <string name="cancel_request">Otkaži</string>
    <string name="rate">Oceni</string>
    <string name="comment">Komentar</string>
    <string name="favorite_handymen">Pregled odabranih majstora</string>
    <string name="statistic">Statistika</string>
    <string name="requests_realized">Realizovani zahtevi</string>
    <string name="requests_denied">Zahtevi odbijeni</string>
    <string name="request_archive">Evidencija zahteva</string>
    <string name="update_account">Održavanje naloga</string>
    <string name="request_search">Pretraga zahteva</string>
    <string name="location">Lokacija</string>
    <string name="customer_rank">Rang kupca</string>
    <string name="accept">Prihvati</string>
    <string name="deny">Odbaci</string>
    <string name="customer_profile">Profil kupca</string>
    <string name="customer_history">Pregled kupaca</string>
    <string name="username_empty">Morate uneti korisnički nalog!</string>
    <string name="password_empty">Morate uneti lozinku!</string>
    <string name="invalid_user">Ne postoji korisnik sa unetim nalogom!</string>
    <string name="invalid_password">Pogrešna lozinka.</string>
    <string name="title_activity_mapa_obrisi_me">Map</string>
    <string name="user_exists">Korisnički nalog već postoji!</string>
    <string name="unmatching_passwords">Lozinke se ne podudaraju!</string>
    <string name="account_info">Morate popuniti informacije o nalogu klikom na ikonicu!</string>
    <string name="account_empty">Morate popuniti sva polja forme kako biste se registrovali!</string>
    <string name="empty_fields">Morate popuniti sva polja forme!</string>
    <string name="invalid_date">Neodgovarajući format datuma.</string>
</resources>
