<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/customer_search_tab"
        android:icon="@drawable/ic_search_white"
        android:title="@string/search"/>

    <item
        android:id="@+id/customer_requests_tab"
        android:icon="@drawable/ic_requests_white"
        android:title="@string/requests" />

    <item
        android:id="@+id/customer_favorites_tab"
        android:icon="@drawable/ic_favrites_white"
        android:title="@string/handyman" />

    <item
        android:id="@+id/customer_edit_tab"
        android:icon="@drawable/ic_edit_user_white"
        android:title="@string/edit" />

    <item
        android:id="@+id/customer_log_out_tab"
        android:icon="@drawable/ic_log_out_white"
        android:title="@string/logout" />
</menu>
