<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="15dp"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:padding="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp"
            android:layout_margin="5dp"
            android:layout_weight="1">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@id/name_edit"
                android:text="@string/name"
                android:textColor="@color/colorGrey" />

            <EditText
                android:id="@+id/name_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@id/surname_edit"
                android:text="@string/surname"
                android:textColor="@color/colorGrey" />

            <EditText
                android:id="@+id/surname_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <EditText
                android:id="@+id/account_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/account"
                android:drawableRight="@drawable/ic_account_black"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp"
            android:layout_margin="5dp"
            android:layout_weight="1">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@id/phone_edit"
                android:text="@string/phone"
                android:textColor="@color/colorGrey" />

            <EditText
                android:id="@+id/phone_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@id/email_edit"
                android:text="@string/email"
                android:textColor="@color/colorGrey" />

            <EditText
                android:id="@+id/email_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <EditText
                android:id="@+id/credit_card_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/credit_card"
                android:drawableRight="@drawable/ic_credit_card"
                />
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:text="@string/basic"
        android:layout_marginLeft="15dp"
        android:background="#ffffff"
        android:textSize="20sp"
        android:textStyle="italic"
        android:textColor="@color/colorPrimary"/>

</RelativeLayout>