<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        card_view:cardCornerRadius="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="3dp"
                android:text="@string/registration"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"
                android:textStyle="bold|italic" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                android:layout_marginBottom="7dp"
                android:background="?android:attr/dividerHorizontal" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioGroup
                    android:id="@+id/user_type_radio_group"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="center">

                    <RadioButton
                        android:id="@+id/customer_radio_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:padding="10dp"
                        android:text="@string/customer" />

                    <RadioButton
                        android:id="@+id/handyman_radio_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text="@string/handyman" />
                </RadioGroup>

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/border"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal"
                        android:padding="10dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:layout_margin="5dp"
                            android:layout_weight="1">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:labelFor="@id/name_edit"
                                android:text="@string/name"
                                android:textColor="@color/colorGrey" />

                            <EditText
                                android:id="@+id/name_edit"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:padding="5dp"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:labelFor="@id/surname_edit"
                                android:text="@string/surname"
                                android:textColor="@color/colorGrey" />

                            <EditText
                                android:id="@+id/surname_edit"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:padding="5dp"/>

                            <EditText
                                android:id="@+id/account_edit"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/account"
                                android:drawableRight="@drawable/ic_account_black"/>
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:layout_margin="5dp"
                            android:layout_weight="1">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:labelFor="@id/phone_edit"
                                android:text="@string/phone"
                                android:textColor="@color/colorGrey" />

                            <EditText
                                android:id="@+id/phone_edit"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:padding="5dp"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:labelFor="@id/email_edit"
                                android:text="@string/email"
                                android:textColor="@color/colorGrey" />

                            <EditText
                                android:id="@+id/email_edit"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:padding="5dp"/>

                            <EditText
                                android:id="@+id/credit_card_edit"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/card"
                                android:drawableRight="@drawable/ic_credit_card"/>

                            <EditText
                                android:id="@+id/job_edit"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/job"
                                android:drawableRight="@drawable/ic_job_black"
                                android:visibility="gone"/>
                        </LinearLayout>

                    </LinearLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:text="@string/basic"
                        android:layout_marginLeft="15dp"
                        android:background="#ffffff"
                        android:textSize="20sp"
                        android:textStyle="italic"
                        android:textColor="@color/colorPrimary"/>

                </RelativeLayout>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/comment"
                    android:paddingLeft="20dp"/>
                <EditText
                    android:id="@+id/registration_comment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minLines="2"
                    android:maxLines="4"
                    android:padding="3dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:layout_marginTop="10dp">
                    <Button
                        android:id="@+id/user_registration_save"
                        android:layout_width="155dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:background="@drawable/button_css"
                        android:drawableRight="@drawable/ic_save_white"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:text="@string/save"
                        android:textAlignment="textStart"
                        android:textColor="@color/colorWhite"
                        android:textSize="16sp" />

                    <!--<Button-->
                        <!--android:id="@+id/user_registration_cancel"-->
                        <!--android:layout_width="155dp"-->
                        <!--android:layout_height="wrap_content"-->
                        <!--android:layout_margin="5dp"-->
                        <!--android:background="@drawable/button_css"-->
                        <!--android:drawableRight="@drawable/ic_cancel_white"-->
                        <!--android:paddingLeft="10dp"-->
                        <!--android:paddingRight="10dp"-->
                        <!--android:text="@string/cancel"-->
                        <!--android:textAlignment="textStart"-->
                        <!--android:textColor="@color/colorWhite"-->
                        <!--android:textSize="16sp" />-->
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

</RelativeLayout>