<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="15dp"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/border"
        android:orientation="vertical"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingTop="30dp"
        android:paddingBottom="15dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@id/credit_card_number_edit"
            android:text="@string/credit_card_number"
            android:textColor="@color/colorGrey" />

        <EditText
            android:id="@+id/credit_card_number_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_marginRight="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:labelFor="@id/credit_card_validity_edit"
                    android:text="@string/validity"
                    android:textColor="@color/colorGrey" />

                <EditText
                    android:id="@+id/credit_card_validity_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_marginLeft="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:labelFor="@id/credit_card_code_edit"
                    android:text="@string/verification_code"
                    android:textColor="@color/colorGrey" />

                <EditText
                    android:id="@+id/credit_card_code_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginTop="10dp">
            <Button
                android:layout_width="155dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/button_css"
                android:drawableRight="@drawable/ic_save_white"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/save"
                android:textAlignment="textStart"
                android:textColor="@color/colorWhite"
                android:textSize="16sp" />

            <Button
                android:layout_width="155dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/button_css"
                android:drawableRight="@drawable/ic_cancel_white"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/cancel"
                android:textAlignment="textStart"
                android:textColor="@color/colorWhite"
                android:textSize="16sp" />
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="15dp"
        android:background="#ffffff"
        android:text="@string/credit_card"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        android:textStyle="italic" />

</RelativeLayout>