<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        card_view:cardCornerRadius="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="3dp"
                android:text="@string/registration"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"
                android:textStyle="bold|italic" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                android:layout_marginBottom="7dp"
                android:background="?android:attr/dividerHorizontal" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioGroup
                    android:id="@+id/user_type_radio_group"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="center">

                    <RadioButton
                        android:id="@+id/customer_radio_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:padding="10dp"
                        android:text="@string/customer" />

                    <RadioButton
                        android:id="@+id/handyman_radio_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text="@string/handyman" />
                </RadioGroup>

                <include
                    layout="@layout/user_basic_information_form"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal">
                    <Button
                        android:layout_width="155dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:background="@drawable/button_css"
                        android:drawableRight="@drawable/ic_save_white"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:text="@string/save"
                        android:textAlignment="textStart"
                        android:textColor="@color/colorWhite"
                        android:textSize="16sp" />

                    <Button
                        android:layout_width="155dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:background="@drawable/button_css"
                        android:drawableRight="@drawable/ic_cancel_white"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:text="@string/cancel"
                        android:textAlignment="textStart"
                        android:textColor="@color/colorWhite"
                        android:textSize="16sp" />
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

</RelativeLayout>