<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        card_view:cardCornerRadius="4dp"
        android:padding="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="@string/handyman_service"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"/>
            <android.support.v4.widget.Space
                android:layout_height="1dp"
                android:layout_width="match_parent"
                android:background="?android:attr/listDivider"/>
            <EditText
                android:id="@+id/usernameEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableRight="@drawable/ic_user"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@id/usernameEdit"
                android:text="@string/username"
                android:textColor="@color/colorGrey"/>
            <EditText
                android:id="@+id/passwordEdit"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableRight="@drawable/ic_eye"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@id/passwordEdit"
                android:text="@string/password"/>

        </LinearLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>